--- a/app.css
+++ b/app.css
@@ -1,20 +1,24 @@
-#content {
-  text-align: center;
-  padding-top: 45%;
-  color: white;
-  font-family: Lato;
-}
-
-html {
-  height: 100%
-}
-
 body {
-  background: url(https://source.unsplash.com/Rr9zn33OMbk);
+  background: url(https://source.unsplash.com/e9rkZKjdlSc);
   background-size: cover;
   background-position: center;
   font-family: Lato;
+  color: white;
+}
 
+#content {
+  text-align: center;
+  padding-top: 35%;
+  color: white;
+  font-family: Lato;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+               0px 8px 13px rgba(0,0,0,0.1),
+               0px 18px 23px rgba(0,0,0,0.4)
+}
+
+#content > h1 {
+  font-weight: 700;
+  font-size: 5em;
 }
 
 hr {
@@ -23,10 +27,14 @@ hr {
   border-bottom: 1px solid rgba(0,0,0,0.2)
 }
 
+html {
+  height: 100%;
+}
 /*
 
 Man alone: https://unsplash.com/@nasa?photo=Yj1M5riCKk4
 surface of the moon: https://unsplash.com/@nasa?photo=jlV2k_Fx0fc
 SpaceX Liftoff: https://unsplash.com/search/rocket?photo=TV2gg2kZD1o
 Forest for the Stars: https://unsplash.com/collections/662440/space?photo=Rr9zn33OMbk
+Just the Moon : e9rkZKjdlSc
 */
